--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,7 +31,7 @@ repos:
     hooks:
       - id: pylint
         name: pylint
-        entry: python -m pylint
+        entry: .venv/bin/python -m pylint
         args: [--fail-under=10.0]
         language: system
         types: [python]
@@ -46,7 +46,7 @@ repos:
         always_run: true
       - id: pytest
         name: pytest
-        entry: python -m pytest tests/
+        entry: .venv/bin/python -m pytest tests/
         language: system
         pass_filenames: false
         stages: [pre-push]
